--- a/certbot-cloudflare-playbook.yaml
+++ b/certbot-cloudflare-playbook.yaml
@@ -54,6 +54,7 @@
         - name: Restart Caddy Docker container
           docker_container:
             name: caddy # Or the actual name of your container
+            state: started
             restart: yes
           register: output8
 
