--- a/certbot-cloudflare-playbook.yaml
+++ b/certbot-cloudflare-playbook.yaml
@@ -40,7 +40,7 @@
             --dns-cloudflare
             --dns-cloudflare-credentials {{ ansible_user_dir }}/.secrets/cloudflare.ini
             --dns-cloudflare-propagation-seconds 120
-            -d "*.{{ item }}"  # Iterate through hostnames
+            -d "*.{{ item }}"
             -m {{ var_certbot_mail }} 
             --agree-tos 
             -n
