--- a/certbot-cloudflare-sg-playbook.yaml
+++ b/certbot-cloudflare-sg-playbook.yaml
@@ -50,14 +50,14 @@
           loop: "{{ groups['sslhosts'] }}"  # Iterate over the sslhosts group
           register: output4  # Register all results
           
-        - name: Restart services
-          systemd:
-            name: "{{ item }}"
-            state: restarted
-          loop: "{{ groups['services'] }}" # Iterate through the 'services' group, provide empty list as default
-          when: groups['services'] is defined # Only run this task if the group is defined.
-          ignore_errors: yes # Optional: Continue even if a service restart fails
-          register: output5 # Capture results for debugging
+        # - name: Restart services
+        #   systemd:
+        #     name: "{{ item }}"
+        #     state: restarted
+        #   loop: "{{ groups['services'] }}" # Iterate through the 'services' group, provide empty list as default
+        #   when: groups['services'] is defined # Only run this task if the group is defined.
+        #   ignore_errors: yes # Optional: Continue even if a service restart fails
+        #   register: output5 # Capture results for debugging
 
         - name: Sending an e-mail if tasks findished successfully
           become: no
@@ -94,6 +94,6 @@
             - "{{ output2 | default(omit) }}"
             - "{{ output3 | default(omit) }}"
             - "{{ output4 | default(omit) }}"
-            - "{{ output5 | default(omit) }}"
+            # - "{{ output5 | default(omit) }}"
             - "{{ output6 | default(omit) }}"
             - "{{ output7 | default(omit) }}"
