--- a/install-docker-caddy.yaml
+++ b/install-docker-caddy.yaml
@@ -33,6 +33,7 @@
       apt:
         name: docker-ce
         state: present
+        update_cache: yes
       register: output5
 
     - name: Add user to docker group
