--- a/update_portainer.yaml
+++ b/update_portainer.yaml
@@ -27,55 +27,90 @@
             fail_msg: "Please define all 'var_gmail_*' variables in your inventory file."
           run_once: true # Check this only once per run
 
-        - name: "Pull the latest Docker image: {{ image_name }}:{{ image_tag }}"
-          community.docker.docker_image:
+        # --- GATHER IMAGE INFORMATION ---
+        - name: "1. Get info about the remote image from the registry"
+          community.docker.docker_image_info:
             name: "{{ image_name }}:{{ image_tag }}"
-            source: pull
-          register: image_pull_result
+            source: remote
+          register: remote_image_info
 
-        - name: "Stop, remove, and recreate container on local servers (Port Mapping)"
-          community.docker.docker_container:
+        - name: "Set remote image digest fact"
+          ansible.builtin.set_fact:
+            remote_digest: "{{ (remote_image_info.images[0].RepoDigests | first) | default('') }}"
+
+        - name: "2. Get info about the currently running container"
+          community.docker.docker_container_info:
             name: "{{ container_name }}"
-            image: "{{ image_name }}:{{ image_tag }}"
-            state: started
-            recreate: yes
-            pull: true
-            restart_policy: always
-            ports:
-              - "9000:9000"
-            volumes:
-              - /var/run/docker.sock:/var/run/docker.sock
-              - "{{ container_name }}_data:/data"
-          when: inventory_hostname in groups['localservers']
-          register: container_update_result_local
+          register: container_info
 
-        - name: "Stop, remove, and recreate container on external servers (Host Network)"
-          community.docker.docker_container:
-            name: "{{ container_name }}"
-            image: "{{ image_name }}:{{ image_tag }}"
-            state: started
-            recreate: yes
-            pull: true
-            restart_policy: always
-            network_mode: host
-            volumes:
-              - /var/run/docker.sock:/var/run/docker.sock
-              - "{{ container_name }}_data:/data"
-          when: inventory_hostname in groups['externalservers']
-          register: container_update_result_external
+        - name: "3. Get info about the local image used by the container"
+          community.docker.docker_image_info:
+            name: "{{ container_info.container.Image }}"
+          when: container_info.exists
+          register: local_image_info
 
-        - name: "Send update success e-mail"
-          ansible.builtin.mail:
-            host: "{{ var_gmail_smtp_server }}"
-            port: "{{ var_gmail_smtp_port }}"
-            username: "{{ var_gmail_sender }}"
-            password: "{{ var_gmail_password }}"
-            to: "{{ var_gmail_receiver }}"
-            subject: "SUCCESS: Docker container '{{ container_name }}' updated on {{ inventory_hostname }}"
-            body: "The Ansible playbook successfully updated the '{{ container_name }}' container on {{ inventory_hostname }} to image '{{ image_name }}:{{ image_tag }}'."
-          delegate_to: localhost
-          become: no
-          register: success_email_result
+        - name: "Set local image digest fact"
+          ansible.builtin.set_fact:
+            local_digest: "{{ (local_image_info.images[0].RepoDigests | first) | default('') if container_info.exists else '' }}"
+
+        # --- CONDITIONALLY UPDATE CONTAINER ---
+        - name: "Update container because a new image is available or container is missing"
+          block:
+            - name: "Pull the latest Docker image: {{ image_name }}:{{ image_tag }}"
+              community.docker.docker_image:
+                name: "{{ image_name }}:{{ image_tag }}"
+                source: pull
+              register: image_pull_result
+
+            - name: "Stop, remove, and recreate container on local servers (Port Mapping)"
+              community.docker.docker_container:
+                name: "{{ container_name }}"
+                image: "{{ image_name }}:{{ image_tag }}"
+                state: started
+                recreate: yes
+                pull: true
+                restart_policy: always
+                ports:
+                  - "9000:9000"
+                volumes:
+                  - /var/run/docker.sock:/var/run/docker.sock
+                  - "{{ container_name }}_data:/data"
+              when: inventory_hostname in groups['localservers']
+              register: container_update_result_local
+
+            - name: "Stop, remove, and recreate container on external servers (Host Network)"
+              community.docker.docker_container:
+                name: "{{ container_name }}"
+                image: "{{ image_name }}:{{ image_tag }}"
+                state: started
+                recreate: yes
+                pull: true
+                restart_policy: always
+                network_mode: host
+                volumes:
+                  - /var/run/docker.sock:/var/run/docker.sock
+                  - "{{ container_name }}_data:/data"
+              when: inventory_hostname in groups['externalservers']
+              register: container_update_result_external
+
+            - name: "Send update success e-mail"
+              ansible.builtin.mail:
+                host: "{{ var_gmail_smtp_server }}"
+                port: "{{ var_gmail_smtp_port }}"
+                username: "{{ var_gmail_sender }}"
+                password: "{{ var_gmail_password }}"
+                to: "{{ var_gmail_receiver }}"
+                subject: "SUCCESS: Docker container '{{ container_name }}' updated on {{ inventory_hostname }}"
+                body: "The Ansible playbook successfully updated the '{{ container_name }}' container on {{ inventory_hostname }} to image '{{ image_name }}:{{ image_tag }}'."
+              delegate_to: localhost
+              become: no
+              register: success_email_result
+          when: not container_info.exists or (remote_digest | length > 0 and remote_digest != local_digest)
+
+        - name: "Skip update as container is already on the latest image"
+          ansible.builtin.debug:
+            msg: "Container '{{ container_name }}' on {{ inventory_hostname }} is already running the latest image. No action taken."
+          when: container_info.exists and (remote_digest | length == 0 or remote_digest == local_digest)
 
       rescue:
         - name: "Send update failure e-mail"
@@ -121,7 +156,7 @@
               dangling: false
           register: prune_result
 
-        - name: "Send prune success e--mail"
+        - name: "Send prune success e-mail"
           ansible.builtin.mail:
             host: "{{ var_gmail_smtp_server }}"
             port: "{{ var_gmail_smtp_port }}"
