--- a/update_portainer.yaml
+++ b/update_portainer.yaml
@@ -35,7 +35,7 @@
 
         - name: "2. Save the current image ID for comparison later"
           ansible.builtin.set_fact:
-            current_image_id: "{{ container_info.container.ImageID }}"
+            current_image_id: "{{ container_info.container.Image }}"
           when: container_info.exists
 
         # --- PULL LATEST IMAGE AND GET ITS INFO ---
